; ModuleID = '/home/carl/AnghaBench/qmk_firmware/users/drashna/extr_drashna.c_bootmagic_lite.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/users/drashna/extr_drashna.c_bootmagic_lite.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BOOTMAGIC_LITE_ROW = common dso_local global i32 0, align 4
@BOOTMAGIC_LITE_COLUMN = common dso_local global i32 0, align 4
@DEBOUNCE = common dso_local global i32 0, align 4
@DEBOUNCING_DELAY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bootmagic_lite() #0 {
  %1 = call i32 (...) @matrix_scan()
  %2 = call i32 @wait_ms(i32 30)
  %3 = call i32 (...) @matrix_scan()
  %4 = load i32, i32* @BOOTMAGIC_LITE_ROW, align 4
  %5 = call i32 @matrix_get_row(i32 %4)
  %6 = load i32, i32* @BOOTMAGIC_LITE_COLUMN, align 4
  %7 = shl i32 1, %6
  %8 = and i32 %5, %7
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %0
  %11 = call i32 (...) @bootloader_jump()
  br label %12

12:                                               ; preds = %10, %0
  ret void
}

declare dso_local i32 @matrix_scan(...) #1

declare dso_local i32 @wait_ms(i32) #1

declare dso_local i32 @matrix_get_row(i32) #1

declare dso_local i32 @bootloader_jump(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
